# inductor

./: .gitignore  Cargo.toml  README.md  embeddings.csv  flake.nix
src/: main.rs
src/cli/: config.rs  documents.rs  embeddings.rs  mod.rs  text_generator.rs  tokens.rs
src/documents/: database.rs  document.rs  mod.rs
src/embeddings/: database.rs  mod.rs  model.rs  train_batches.rs  train_samples.rs
src/text_generator/: mod.rs  model.rs  train_batches.rs  train_samples.rs
src/tokenizer/: database.rs  mod.rs  parser.rs
