[package]
name = "inductor"
version = "0.1.0"
authors = ["Nikita Podvirnyi <krypt0nn@vk.com>"]
homepage = "https://github.com/krypt0nn/inductor"
repository = "https://github.com/krypt0nn/inductor"
license = "GPL-3.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.release]
strip = true
opt-level = 3
lto = "fat"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
colorful = "0.3.2"

burn = { version = "0.16", features = ["metrics", "train", "wgpu", "fusion", "remote", "server"] }

# fix burn crate error: https://github.com/tracel-ai/burn/issues/2876
bincode = "=2.0.0-rc.3"
bincode_derive = "=2.0.0-rc.3"

anyhow = "1.0"
mimalloc = "0.1"
rusqlite = { version = "0.32", features = ["bundled"] }
lz4_flex = "0.11"
fastrand = "2.3"
rand = "0.8.5"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
